--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.5.3",
     "@nestjs/websockets": "^6.5.3",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "mongoose": "^5.8.7",
     "npm-run-all": "^4.1.5",
